--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     <p>Adquira agora o kit completo com 55 eBooks por <strong>R$39,90</strong> (acesso vitalício).</p>
     <div class="countdown" id="timer">Carregando contador...</div>
     <p>Pagamento via PIX. Envie o comprovante e receba os livros no e-mail ou WhatsApp.</p>
-    <button onclick="window.open('https://wa.me/5568992493742"', '_blank')">Comprar via WhatsApp</button>
+    <button onclick="window.open('https://wa.me/5568992493742?text=Ol%C3%A1%20quero%20mais%20informacoes%20sobre%20o%20kit', '_blank')">Comprar via WhatsApp</button>
   </section>
 
   <section class="quote-section">
